[BZ #5186]

* time/tzset.c (__tz_convert): Don't force testing for a change of
	TZ if not called from localtime.  But then also see whether the
	file changed, in case __use_tzfile is set.